--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "dns": "^0.2.2",
+    "fs": "0.0.1-security",
     "mongodb": "^4.1.3",
+    "net": "^1.0.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "tls": "0.0.1"
   }
 }
