--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "dns": "^0.2.2",
     "fs": "0.0.1-security",
-    "mongodb": "^4.1.3",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.4",
     "net": "^1.0.2",
     "next": "latest",
+    "next-connect": "^0.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.49.9",
