--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dns": "^0.2.2",
     "fs": "0.0.1-security",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.4",
     "net": "^1.0.2",
     "next": "latest",
+    "next-auth": "^4.2.1",
     "next-connect": "^0.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
