--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,9 @@
 MONGODB_URI=mongodb+srv://nutshelladmin:Nutshell2525@cluster0.0ihx7.mongodb.net/Nutshell?retryWrites=true&w=majority
 MONGODB_DB=Nutshell
-NEXTAUTH_SECRET=20f2518763eb6f6053ec85c5ab22af6f
-NEXTAUTH_URL=${VERCEL_URL}
+
+
+AUTH0_SECRET='CE68416E3C801B14224A4D557564F782'
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='https://dev-wo4ey-tk.us.auth0.com'
+AUTH0_CLIENT_ID='avSroYv1CkTfWzAYiHcdqTNcN8427gn3'
+AUTH0_CLIENT_SECRET='00ZyH3BsegBnZtGrglrJTmBBn0lfE0DnRIdItr3p6c02pmb1dbUKpHtRk_Nd6STq'
