--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "dns": "^0.2.2",
