--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@ MONGODB_DB=Nutshell
 
 
 AUTH0_SECRET='CE68416E3C801B14224A4D557564F782'
-AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_BASE_URL='https://www.nutshell.news'
 AUTH0_ISSUER_BASE_URL='https://dev-wo4ey-tk.us.auth0.com'
 AUTH0_CLIENT_ID='avSroYv1CkTfWzAYiHcdqTNcN8427gn3'
 AUTH0_CLIENT_SECRET='00ZyH3BsegBnZtGrglrJTmBBn0lfE0DnRIdItr3p6c02pmb1dbUKpHtRk_Nd6STq'
