--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "dns": "^0.2.2",
+    "escape-string-regexp": "^5.0.0",
     "fs": "0.0.1-security",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.4",
@@ -19,6 +20,7 @@
     "next-connect": "^0.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.49.9",
     "swr": "^1.2.2",
     "tls": "0.0.1"
