--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://nutshelladmin:Nutshell2525@cluster0.0ihx7.mongodb.net/Nutshell?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://nutshelladmin:fnSGo7ZT6M6r@cluster0.mtkdu37.mongodb.net/?retryWrites=true&w=majority
 MONGODB_DB=Nutshell
 
 
