--- a/package.json
+++ b/package.json
@@ -21,8 +21,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
+    "react-update": "^0.4.4",
     "sass": "^1.49.9",
     "swr": "^1.2.2",
-    "tls": "0.0.1"
+    "tls": "0.0.1",
+    "ws": "^8.11.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
