--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "sass": "^1.49.9",
     "swr": "^1.2.2",
     "tls": "0.0.1",
+    "webpack": "^5.75.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.7"
   }
 }
