--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
     "auth0": "^2.40.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dns": "^0.2.2",
     "escape-string-regexp": "^5.0.0",
@@ -17,14 +17,17 @@
     "mongoose": "^6.2.4",
     "net": "^1.0.2",
     "next": "latest",
+    "next-auth": "^4.20.1",
     "next-connect": "^0.12.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "nextjs": "^0.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-update": "^0.4.4",
     "sass": "^1.49.9",
     "swr": "^1.2.2",
     "tls": "0.0.1",
+    "validator": "^13.9.0",
     "webpack": "^5.75.0",
     "ws": "^8.11.0"
   },
