--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-update": "^0.4.4",
     "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
     "swr": "^1.2.2",
     "tls": "0.0.1",
     "validator": "^13.9.0",
